// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default component 1`] = `""`;

exports[`should render with a given breakpoint 1`] = `
<ResponsiveElement
  defaultElement={
    <div
      className={undefined}
      data-terra-clinical-item-collection-list-view={true}
      onChange={undefined}
    >
      <SingleSelectList
        hasChevrons={false}
        isDivided={false}
        onChange={[Function]}
      >
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              displays={
                Array [
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 1"
                    textStyle={undefined}
                  />,
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 2"
                    textStyle={undefined}
                  />,
                ]
              }
              endAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    End Accessory
                  </p>
                </div>
              }
              isTruncated={false}
              layout="oneColumn"
              reserveStartAccessorySpace={false}
              startAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    Start Accessory
                  </p>
                </div>
              }
              textEmphasis="default"
            />
          }
          hasChevron={undefined}
          isSelectable={undefined}
          isSelected={false}
        />
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              displays={
                Array [
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 1"
                    textStyle={undefined}
                  />,
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 2"
                    textStyle={undefined}
                  />,
                ]
              }
              endAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    End Accessory
                  </p>
                </div>
              }
              isTruncated={false}
              layout="oneColumn"
              reserveStartAccessorySpace={false}
              startAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    Start Accessory
                  </p>
                </div>
              }
              textEmphasis="default"
            />
          }
          hasChevron={undefined}
          isSelectable={undefined}
          isSelected={false}
        />
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              displays={
                Array [
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 1"
                    textStyle={undefined}
                  />,
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 2"
                    textStyle={undefined}
                  />,
                ]
              }
              endAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    End Accessory
                  </p>
                </div>
              }
              isTruncated={false}
              layout="oneColumn"
              reserveStartAccessorySpace={false}
              startAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    Start Accessory
                  </p>
                </div>
              }
              textEmphasis="default"
            />
          }
          hasChevron={undefined}
          isSelectable={undefined}
          isSelected={false}
        />
      </SingleSelectList>
    </div>
  }
  medium={
    <div
      className={undefined}
      data-terra-clinical-item-collection-table-view={true}
      onChange={undefined}
    >
      <Table
        isPadded={true}
        isStriped={true}
        style={
          Object {
            "tableLayout": "fixed",
          }
        }
      >
        <TableHeader
          onClick={undefined}
          style={
            Object {
              "visibility": "hidden",
            }
          }
        >
          <TableHeaderCell
            columnType="accessory"
          />
          <TableHeaderCell
            columnType="display"
          />
          <TableHeaderCell
            columnType="display"
          />
          <TableHeaderCell
            columnType="comment"
          />
          <TableHeaderCell
            columnType="accessory"
          />
        </TableHeader>
        <SingleSelectableRows
          onChange={[Function]}
        >
          <TableRow
            isSelectable={true}
            isSelected={false}
          >
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              }
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 1"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 2"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              data-terra-clinical-item-collection-content="comment"
            />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              }
            />
          </TableRow>
          <TableRow
            isSelectable={true}
            isSelected={false}
          >
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              }
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 1"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 2"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              data-terra-clinical-item-collection-content="comment"
            />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              }
            />
          </TableRow>
          <TableRow
            isSelectable={true}
            isSelected={false}
          >
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              }
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 1"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 2"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              data-terra-clinical-item-collection-content="comment"
            />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              }
            />
          </TableRow>
        </SingleSelectableRows>
      </Table>
    </div>
  }
  responsiveTo="parent"
/>
`;

exports[`should render with multiple rows 1`] = `
<ResponsiveElement
  defaultElement={
    <div
      className={undefined}
      data-terra-clinical-item-collection-list-view={true}
      onChange={undefined}
    >
      <SingleSelectList
        hasChevrons={false}
        isDivided={false}
        onChange={[Function]}
      >
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              displays={
                Array [
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 1"
                    textStyle={undefined}
                  />,
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 2"
                    textStyle={undefined}
                  />,
                ]
              }
              endAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    End Accessory
                  </p>
                </div>
              }
              isTruncated={false}
              layout="oneColumn"
              reserveStartAccessorySpace={false}
              startAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    Start Accessory
                  </p>
                </div>
              }
              textEmphasis="default"
            />
          }
          hasChevron={undefined}
          isSelectable={undefined}
          isSelected={false}
        />
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              displays={
                Array [
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 1"
                    textStyle={undefined}
                  />,
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 2"
                    textStyle={undefined}
                  />,
                ]
              }
              endAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    End Accessory
                  </p>
                </div>
              }
              isTruncated={false}
              layout="oneColumn"
              reserveStartAccessorySpace={false}
              startAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    Start Accessory
                  </p>
                </div>
              }
              textEmphasis="default"
            />
          }
          hasChevron={undefined}
          isSelectable={undefined}
          isSelected={false}
        />
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              displays={
                Array [
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 1"
                    textStyle={undefined}
                  />,
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 2"
                    textStyle={undefined}
                  />,
                ]
              }
              endAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    End Accessory
                  </p>
                </div>
              }
              isTruncated={false}
              layout="oneColumn"
              reserveStartAccessorySpace={false}
              startAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    Start Accessory
                  </p>
                </div>
              }
              textEmphasis="default"
            />
          }
          hasChevron={undefined}
          isSelectable={undefined}
          isSelected={false}
        />
      </SingleSelectList>
    </div>
  }
  responsiveTo="parent"
  small={
    <div
      className={undefined}
      data-terra-clinical-item-collection-table-view={true}
      onChange={undefined}
    >
      <Table
        isPadded={true}
        isStriped={true}
        style={
          Object {
            "tableLayout": "fixed",
          }
        }
      >
        <TableHeader
          onClick={undefined}
          style={
            Object {
              "visibility": "hidden",
            }
          }
        >
          <TableHeaderCell
            columnType="accessory"
          />
          <TableHeaderCell
            columnType="display"
          />
          <TableHeaderCell
            columnType="display"
          />
          <TableHeaderCell
            columnType="comment"
          />
          <TableHeaderCell
            columnType="accessory"
          />
        </TableHeader>
        <SingleSelectableRows
          onChange={[Function]}
        >
          <TableRow
            isSelectable={true}
            isSelected={false}
          >
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              }
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 1"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 2"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              data-terra-clinical-item-collection-content="comment"
            />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              }
            />
          </TableRow>
          <TableRow
            isSelectable={true}
            isSelected={false}
          >
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              }
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 1"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 2"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              data-terra-clinical-item-collection-content="comment"
            />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              }
            />
          </TableRow>
          <TableRow
            isSelectable={true}
            isSelected={false}
          >
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              }
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 1"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 2"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              data-terra-clinical-item-collection-content="comment"
            />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              }
            />
          </TableRow>
        </SingleSelectableRows>
      </Table>
    </div>
  }
/>
`;

exports[`should render with one row 1`] = `
<ResponsiveElement
  defaultElement={
    <div
      className={undefined}
      data-terra-clinical-item-collection-list-view={true}
      onChange={undefined}
    >
      <SingleSelectList
        hasChevrons={false}
        isDivided={false}
        onChange={[Function]}
      >
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              displays={
                Array [
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 1"
                    textStyle={undefined}
                  />,
                  <ItemDisplay
                    icon={undefined}
                    isTruncated={false}
                    text="Display 2"
                    textStyle={undefined}
                  />,
                ]
              }
              endAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    End Accessory
                  </p>
                </div>
              }
              isTruncated={false}
              layout="oneColumn"
              reserveStartAccessorySpace={false}
              startAccessory={
                <div
                  className="list-accessory"
                >
                  <p>
                    Start Accessory
                  </p>
                </div>
              }
              textEmphasis="default"
            />
          }
          hasChevron={undefined}
          isSelectable={undefined}
          isSelected={false}
        />
      </SingleSelectList>
    </div>
  }
  responsiveTo="parent"
  small={
    <div
      className={undefined}
      data-terra-clinical-item-collection-table-view={true}
      onChange={undefined}
    >
      <Table
        isPadded={true}
        isStriped={true}
        style={
          Object {
            "tableLayout": "fixed",
          }
        }
      >
        <TableHeader
          onClick={undefined}
          style={
            Object {
              "visibility": "hidden",
            }
          }
        >
          <TableHeaderCell
            columnType="accessory"
          />
          <TableHeaderCell
            columnType="display"
          />
          <TableHeaderCell
            columnType="display"
          />
          <TableHeaderCell
            columnType="comment"
          />
          <TableHeaderCell
            columnType="accessory"
          />
        </TableHeader>
        <SingleSelectableRows
          onChange={[Function]}
        >
          <TableRow
            isSelectable={true}
            isSelected={false}
          >
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              }
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 1"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemDisplay
                  icon={undefined}
                  isTruncated={false}
                  text="Display 2"
                  textStyle={undefined}
                />
              }
              data-terra-clinical-item-collection-content="display"
            />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment"
                />
              }
              data-terra-clinical-item-collection-content="comment"
            />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              }
            />
          </TableRow>
        </SingleSelectableRows>
      </Table>
    </div>
  }
/>
`;
